Finished HTML and CSS code for project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <link href="/Users/tori-annwatkis/Documents/Projects/Excursion/Resources/CSS/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <div class="header">
     <h1>Discover hidden places in the world around you</h1>
     <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming Soon!)</a>
+     </br>
+     </br>
+   </div>
+
+   <div class="video">
+    <p><video src="Resources/Videos/excursion.mp4" type="video/mp4" autoplay muted loop>
+
+    </video></p>
+  
+  </div>
+
+  <div class="guide">
+    <h1>Your personal travel guide</h1>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+
+    <p><img src="Resources/Images/camp.jpg"></p>
+
+    <p><img src="Resources/Images/phone.png"></p>
+
+    <h1>Coming Soon for iPhone and Android </h1>
+   </div>
+
+   <div class="soon">
+   <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming Soon!)</a>
+   <h2>&copy; Excursion</h2>
+ </div>
 
   </body>
 </html>
