Trying to link CSS file 2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link href="/Users/tori-annwatkis/Documents/Projects/Excursion/Resources/CSS/style.css" type="text/css" rel="stylesheet">
+    <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
@@ -14,7 +14,7 @@
    </div>
 
    <div class="video">
-    <p><video src="/Users/tori-annwatkis/Documents/Projects/Excursion/Resources/Videos/excursion.mp4" type="video/mp4" autoplay muted loop>
+    <p><video src="Resources/Videos/excursion.mp4" type="video/mp4" autoplay muted loop>
 
     </video></p>
 
@@ -24,9 +24,9 @@
     <h1>Your personal travel guide</h1>
     <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
 
-    <p><img src="/Users/tori-annwatkis/Documents/Projects/Excursion/Resources/Images/camp.jpg"></p>
+    <p><img src="Resources/Images/camp.jpg"></p>
 
-    <p><img src="/Users/tori-annwatkis/Documents/Projects/Excursion/Resources/Images/phone.png"></p>
+    <p><img src="Resources/Images/phone.png"></p>
 
     <h1>Coming Soon for iPhone and Android </h1>
    </div>
